--- a/.env.production
+++ b/.env.production
@@ -6,14 +6,15 @@ FLASK_DEBUG=False
 SECRET_KEY=CHANGE_ME_IN_PRODUCTION
 
 # Database Configuration (MySQL for production)
-DATABASE_URL=mysql+pymysql://helpdesk:MYSQL_PASSWORD@mysql:3306/helpdesk_db
-MYSQL_ROOT_PASSWORD=CHANGE_ME_ROOT_PASSWORD
-MYSQL_PASSWORD=CHANGE_ME_MYSQL_PASSWORD
+DATABASE_URL=sqlite:///helpdesk.db
+#DATABASE_URL=mysql+pymysql://helpdesk:MYSQL_PASSWORD@mysql:3306/helpdesk_db
+#MYSQL_ROOT_PASSWORD=CHANGE_ME_ROOT_PASSWORD
+#MYSQL_PASSWORD=CHANGE_ME_MYSQL_PASSWORD
 
 # MongoDB (if using)
-MONGO_URI=mongodb://MONGO_ROOT_USERNAME:MONGO_ROOT_PASSWORD@mongodb:27017/helpdesk_db
-MONGO_ROOT_USERNAME=admin
-MONGO_ROOT_PASSWORD=CHANGE_ME_MONGO_PASSWORD
+#MONGO_URI=mongodb://MONGO_ROOT_USERNAME:MONGO_ROOT_PASSWORD@mongodb:27017/helpdesk_db
+#MONGO_ROOT_USERNAME=admin
+#MONGO_ROOT_PASSWORD=CHANGE_ME_MONGO_PASSWORD
 
 # Microsoft Office 365 OAuth2
 MICROSOFT_CLIENT_ID=your-client-id-here
@@ -24,7 +25,7 @@ MICROSOFT_TENANT_ID=your-tenant-id-here
 EMAIL_HOST=outlook.office365.com
 EMAIL_PORT=993
 EMAIL_USERNAME=projekteit@mlgruppe.de
-EMAIL_PASSWORD=your-email-password-here
+EMAIL_PASSWORD=H5Bn!IpjGr3%1_ID
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
 
@@ -32,23 +33,23 @@ SMTP_PORT=587
 CLAUDE_API_KEY=your-claude-api-key-here
 
 # Microsoft Teams Integration
-TEAMS_WEBHOOK_URL=your-teams-webhook-url
+#TEAMS_WEBHOOK_URL=your-teams-webhook-url
 
 # Sentry for Error Tracking
-SENTRY_DSN=your-sentry-dsn-here
+#SENTRY_DSN=your-sentry-dsn-here
 
 # Redis Configuration
 REDIS_URL=redis://redis:6379/0
 RATELIMIT_STORAGE_URL=redis://redis:6379/1
 
 # Security Keys
-JWT_SECRET_KEY=CHANGE_ME_JWT_SECRET
-CSRF_SECRET_KEY=CHANGE_ME_CSRF_SECRET
+#JWT_SECRET_KEY=CHANGE_ME_JWT_SECRET
+CSRF_SECRET_KEY=QuaSeu2i_ps2208b
 
 # Site Configuration
-SITE_URL=https://helpdesk.mlgruppe.de
-ALLOW_REGISTRATION=False
+SITE_URL=https://ml-helpdesk.de-kundenservice.de
+ALLOW_REGISTRATION=True
 
 # SSL Configuration (if using HTTPS)
-SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
-SSL_KEY_PATH=/etc/nginx/ssl/key.pem
+#SSL_CERT_PATH=/etc/nginx/ssl/cert.pem
+#SSL_KEY_PATH=/etc/nginx/ssl/key.pem
