--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ EMAIL_PASSWORD=
 
 CLAUDE_API_KEY=
 TEAMS_WEBHOOK_URL=
-SENTRY_DSN=
+SENTRY_DSN=""
 
 # Security keys
 JWT_SECRET_KEY=development-jwt-secret
