E-Mail URL verbessert

--- a/.env
+++ b/.env
@@ -24,3 +24,6 @@ CSRF_SECRET_KEY=development-csrf-secret
 
 # Rate limiting (in-memory for development)
 RATELIMIT_STORAGE_URL=memory://
+
+# Site URL for email links (used in email notifications)
+SITE_URL=http://localhost:8000
