--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,21 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 # Language
 LANGUAGE_CODE=de-de
 
+# Customizable Branding (for multi-tenant reusability)
+# These settings allow you to rebrand the application for different companies
+# APP_NAME: Text shown in the navbar (e.g., "Your Company Helpdesk")
+# COMPANY_NAME: Company name for branding purposes
+# LOGO_URL: URL to company logo (can be /static/images/logo.png or external URL)
+#           The logo will be automatically sized to fit the header (40px height)
+# APP_TITLE: Title shown in browser tabs and HTML title tags
+APP_NAME=ML Gruppe Helpdesk
+COMPANY_NAME=ML Gruppe
+LOGO_URL=/static/images/logo.png
+APP_TITLE=ML Gruppe Helpdesk
+
+# Site URL (used for email links)
+SITE_URL=http://localhost:8000
+
 # Database Configuration
 # SQLite (for development)
 DATABASE_URL=sqlite:///db.sqlite3
